Adding streaming logic when reading data from db, in case of memory leak